# synergyLab

./: .cursorignore  .gitignore  README.md  ai_cli.py  ai_coding_agent.py  coding_app.py  main.py  mertlesh.py  mertlesh_sonic.py  metlesh_examples.py  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: python-publish.yml  python-test.yml
docs/: agent_system.md  conversation_memory.md  model_utility.md  multi_agent_systems.md
examples/: agent_with_tools.py  async_performance_comparison.py  basic_llm_usage.py  custom_tools.py  multi_agent_system.py  streaming_example.py  thinking_agents.py
generator/: __init__.py  agents.py  example_agent.py  example_usage.py  llms.py  sample_config.json  tools.py
tests/: test_basic.py
