[project]
name = "synergylab"
version = "0.1.0"
description = "A powerful Python framework for orchestrating intelligent AI systems with multiple LLMs, thinking agents, and collaborative multi-agent architectures."
authors = [
    {name = "Muhammad Salman",email = "msalman2339@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.76.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
