[project]
name = "synergylab"
version = "0.1.0"
description = "A powerful Python framework for orchestrating intelligent AI systems with multiple LLMs, thinking agents, and collaborative multi-agent architectures."
authors = [
    {name = "Muhammad Salman",email = "msalman2339@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.76.0,<2.0.0)"
]
keywords = ["ai", "llm", "agents", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/username/synergylab"
"Bug Tracker" = "https://github.com/username/synergylab/issues"
"Documentation" = "https://synergylab.readthedocs.io/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "synergylab"
version = "0.1.0"
description = "A powerful Python framework for orchestrating intelligent AI systems with multiple LLMs, thinking agents, and collaborative multi-agent architectures."
authors = ["Muhammad Salman <msalman2339@gmail.com>"]
readme = "README.md"
packages = [{include = "generator"}]

[tool.poetry.dependencies]
python = ">=3.10"
dotenv = "^0.9.9"
openai = "^1.76.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
